infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jgair
  labels:
    name: jgair
    app.kubernetes.io/name: jgair
